Use Files.writeString instead of Files.write (#1705)
GitOrigin-RevId: db544a7ca236da6ebfb44fa02ce1d566fb053338