@@ -44,7 +44,6 @@ import org.junit.rules.TemporaryFolder;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
@@ -116,20 +115,21 @@ public class KubernetesClientTest {
     @Test
     public void buildKubernetesApiUrlProviderReturnsEndpointProvider() {
         //language=JSON
-        String endpointSlicesResponse = "{\n"
-                + "  \"kind\": \"Status\",\n"
-                + "  \"apiVersion\": \"v1\",\n"
-                + "  \"metadata\": {\n"
-                + "    \n"
-                + "  },\n"
-                + "  \"status\": \"Failure\",\n"
-                + "  \"message\": \"the server could not find the requested resource\",\n"
-                + "  \"reason\":\"NotFound\",\n"
-                + "  \"details\": {\n"
-                + "    \n"
-                + "  },\n"
-                + "  \"code\": 404\n"
-                + "}";
+        String endpointSlicesResponse = """
+                {
+                  "kind": "Status",
+                  "apiVersion": "v1",
+                  "metadata": {
+                   \s
+                  },
+                  "status": "Failure",
+                  "message": "the server could not find the requested resource",
+                  "reason":"NotFound",
+                  "details": {
+                   \s
+                  },
+                  "code": 404
+                }""";
         stub(String.format("/apis/discovery.k8s.io/v1/namespaces/%s/endpointslices", NAMESPACE),
                 404, endpointSlicesResponse);
         assertThat(kubernetesClient.buildKubernetesApiUrlProvider()).isInstanceOf(KubernetesApiEndpointProvider.class);
@@ -282,15 +282,16 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "us-central1",
+                      "failure-domain.beta.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -307,17 +308,18 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"deprecated-region\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"deprecated-zone\",\n"
-                + "      \"failure-domain.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"failure-domain.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "deprecated-region",
+                      "failure-domain.beta.kubernetes.io/zone": "deprecated-zone",
+                      "failure-domain.kubernetes.io/region": "us-central1",
+                      "failure-domain.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -348,17 +350,18 @@ public class KubernetesClientTest {
         stub(String.format("/api/v1/namespaces/%s/pods/%s", NAMESPACE, podName), pod("hazelcast-0", NAMESPACE, "node-name"));
 
         //language=JSON
-        String nodeResponse = "{\n"
-                + "  \"kind\": \"Node\",\n"
-                + "  \"metadata\": {\n"
-                + "    \"labels\": {\n"
-                + "      \"failure-domain.beta.kubernetes.io/region\": \"deprecated-region\",\n"
-                + "      \"failure-domain.beta.kubernetes.io/zone\": \"deprecated-zone\",\n"
-                + "      \"topology.kubernetes.io/region\": \"us-central1\",\n"
-                + "      \"topology.kubernetes.io/zone\": \"us-central1-a\"\n"
-                + "    }\n"
-                + "  }\n"
-                + "}";
+        String nodeResponse = """
+                {
+                  "kind": "Node",
+                  "metadata": {
+                    "labels": {
+                      "failure-domain.beta.kubernetes.io/region": "deprecated-region",
+                      "failure-domain.beta.kubernetes.io/zone": "deprecated-zone",
+                      "topology.kubernetes.io/region": "us-central1",
+                      "topology.kubernetes.io/zone": "us-central1-a"
+                    }
+                  }
+                }""";
         stub("/api/v1/nodes/node-name", nodeResponse);
 
         // when
@@ -643,7 +646,7 @@ public class KubernetesClientTest {
     public void apiAccessWithTokenRefresh() throws IOException {
         // Token is read from the file, first token value is value-1
         File file = testFolder.newFile("token");
-        Files.write(file.toPath(), "value-1".getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+        Files.writeString(file.toPath(), "value-1", StandardOpenOption.TRUNCATE_EXISTING);
 
         stubFor(get(urlMatching("/apis/.*")).atPriority(1)
                 .withHeader("Authorization", equalTo("Bearer value-1"))
@@ -664,7 +667,7 @@ public class KubernetesClientTest {
         assertFalse(kubernetesClient.isKnownExceptionAlreadyLogged());
 
         // Token is rotated
-        Files.write(file.toPath(), "value-2".getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+        Files.writeString(file.toPath(), "value-2", StandardOpenOption.TRUNCATE_EXISTING);
 
         // Api server will not accept token with old value
         stubFor(get(urlMatching("/apis/.*")).atPriority(1)
@@ -824,7 +827,7 @@ public class KubernetesClientTest {
         assertThat(formatPrivate(result)).containsExactlyInAnyOrder(ready("172.17.0.5", 5701), ready("172.17.1.5", 5701));
     }
 
-    private static PodList podsListResponse() throws JsonProcessingException {
+    private static PodList podsListResponse() {
         return podsList(
                 Arrays.asList(new KubernetesClient.EndpointAddress("192.168.0.25", 5701),
                         new KubernetesClient.EndpointAddress("172.17.0.5", 5702)));
